# vmproxy-cli

./: .env.example  .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
src/: config.py  ssh_client.py  state.py  template_engine.py
src/orchestrator/: init_pipeline.py  rotation_pipeline.py
src/providers/: aliyun.py  base.py  cloudflare.py
templates/: config.json.j2  init.sh.j2  subscribe.txt.j2
