[project]
name = "vmproxy-cli"
version = "0.1.0"
description = "统一的 VM 代理服务器初始化与轮转 CLI 工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "alibabacloud-swas-open20200601>=2.0.0",
    "alibabacloud-bssopenapi20171214>=5.0.0",
    "alibabacloud-tea-openapi>=0.3.0",
    "alibabacloud-tea-util>=0.3.0",
    "cloudflare>=3.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "paramiko>=3.4.0",
    "Jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
